# particle-funhouse

./: Cargo.toml  README.md  config-lisajous.toml  config.gbp11.toml  config.gbp6.toml  config.toml
src/: color_picker.rs  config.rs  emitter.rs  lib.rs  main.rs  mover.rs  particle.rs  sketch.rs
