[package]
name = "particle"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log ={ workspace = true }
pretty_env_logger ={ workspace = true }
lazy_static = { workspace = true }
structopt = { workspace = true }
nannou = { workspace = true }
