[package]
name = "particle"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.5.0"
lazy_static = "1.4.0"
regex = "1.5.4"
structopt = "0.3.21"
nannou = "0.19.0"
serde = "1.0.130"
toml = "0.8.12"

[lib]
name = "particle_lib"
path = "src/lib.rs"

[[bin]]
name = "particle"
path = "src/main.rs"

[[bin]]
name ="sketch"
path = "src/sketch.rs"
